Issue #392 Fixes alignment of message in Add step box (#393)
*  Fixes alignment of message in Add step box

* fixes css info id

* updates class selector in demo

* Spacing changes

--- a/examples/demo.css
+++ b/examples/demo.css
@@ -115,3 +115,7 @@ h1 {
   display: block;
   margin: 0 auto;
 }
+.info {
+  padding: 8px;
+  text-align: center;
+}
